# signaler

./: .gitignore  .replit  CMakeLists.txt  LICENSE  README.md  function.hpp  main  main.cpp  signal.hpp
benchmarks/google/signal/: CMakeLists.txt  signal.cpp
benchmarks/signal/: CMakeLists.txt  signal_micro_bench.cpp
examples/: .replit  CMakeLists.txt  main.cpp
examples/function/: CMakeLists.txt  function_examples.cpp
examples/signal/: CMakeLists.txt  signal_examples.cpp
examples/signal_ping_pong/: CMakeLists.txt  ping_pong_example.cpp
src/: signal.hpp
src/context/: context.hpp  object.hpp
src/context/detail/inter_contexts_queue/: queue.hpp  queue_status.cpp  queue_status.hpp  queue_traits.hpp
src/function/: function.cpp  function.hpp
src/function/detail/: memory_resource_noexcept.hpp  polymorphic_allocator_noexcept.hpp  storage.hpp  type_traits.hpp
src/result/: result.hpp
src/signal/: signal.cpp  signal.hpp
src/signal/detail/: id_connection_generator.hpp
tests/functions/: CMakeLists.txt  function_test.cpp
tests/signals/: CMakeLists.txt
